# mfGUI

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  build.ninja  cmake_install.cmake
Makefiles/: default_vars.mk
assets/fonts/: bangers_regular.h
include/: mfGUI.hpp
includes/: mfGUI.hpp
includes/utils/: Events.hpp  Positions.hpp
includes/widgetComponents/: Background.hpp  EventManager.hpp  ScrollBar.hpp  Text.hpp  Transform.hpp
includes/widgets/: Button.hpp  Container.hpp  Image.hpp  List.hpp  Select.hpp  Slider.hpp  Text.hpp  Widget.hpp  widget.hpp
lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
sandbox/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Sandbox  build.ninja  cmake_install.cmake  mfGUI_sandbox
sandbox/lib/: cmake_install.cmake  libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
sandbox/src/: main.cpp
sandbox/srcs/: main.cpp
src/: mfGUI.cpp  mfGUI.hpp
src/utils/: Direction.hpp
src/widgetAttributes/: Transform.hpp
src/widgetComponents/: Background.cpp  Background.hpp  EventManager.cpp  EventManager.hpp  ScrollBar.cpp  ScrollBar.hpp  Text.cpp  Text.hpp
src/widgets/: Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  Container.cpp  Container.hpp  Image.cpp  Image.hpp  List.cpp  List.hpp  Slider.cpp  Slider.hpp  Text.cpp  Text.hpp  Widget.cpp  Widget.hpp
srcs/: mfGUI.cpp
srcs/widgetComponents/: Background.cpp  EventManager.cpp  ScrollBar.cpp  Text.cpp
srcs/widgets/: Button.cpp  Container.cpp  Image.cpp  List.cpp  Select.cpp  Slider.cpp  Text.cpp  Widget.cpp
